--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//WebContent/Order.jsp=UTF-8
 encoding//WebContent/Orderpage.jsp=UTF-8
 encoding//WebContent/chooseone.jsp=UTF-8
 encoding//WebContent/styles/Order.css=UTF-8
+encoding//src/com/webprogramming/project/DatabaseManager.java=UTF-8
